[gd_scene load_steps=4 format=3 uid="uid://b7bfamjd4mga2"]

[ext_resource type="Script" uid="uid://8gfilwfgdndu" path="res://scenes/bullet.gd" id="1_y25gk"]
[ext_resource type="Texture2D" uid="uid://ddkxo1awuuf70" path="res://assets/bullet.png" id="2_l5glv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eoqba"]
size = Vector2(2, 6)

[node name="Bullet" type="Area2D"]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("1_y25gk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_l5glv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_eoqba")

[node name="ExpirationTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, 3)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ExpirationTimer" to="." method="_on_expiration_timer_timeout"]
